Fix overflow of boxes appended with JavaScript to drawing pad > > This is done with flex-wrap, but border-box is also used to counter the border property given to the appended boxes for testing purposes.

--- a/style.css
+++ b/style.css
@@ -14,19 +14,6 @@
 
 
 /*****************************************
-***************** PAINT ******************
-*****************************************/
-
-.draw-box {
-    border: 2px solid red; /* FOR TESTING ONLY */
-    background-color: rgb(215, 235, 255);
-}
-
-.painted {
-    background-color: rgb(0, 0, 0);
-}
-
-/*****************************************
 ***************** <main> *****************
 *****************************************/
 
@@ -57,7 +44,24 @@ main {
 
 /* DRAWING PAD */
 .drawing-pad {
+    display: flex;
+    flex-wrap: wrap;
     background-color: rgb(215, 235, 255);
     width: 800px;
     height: 800px;
+}
+
+
+/*****************************************
+***************** PAINT ******************
+*****************************************/
+
+.draw-box {
+    box-sizing: border-box;
+    border: 2px solid red; /* FOR TESTING ONLY */
+    background-color: rgb(215, 235, 255);
+}
+
+.painted {
+    background-color: rgb(0, 0, 0);
 }
